Bug 7051 - xauth says creating even though it does not
Summary: xauth says creating even though it does not
Status: CLOSED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: App/xauth (show other bugs)
Version: git
Hardware: x86 (IA32) NetBSD
: high normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-05-28 00:51 UTC by Jeremy C. Reed
Modified: 2011-10-15 16:45 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Jeremy C. Reed 2006-05-28 00:51:10 UTC
When running "xauth list" or "xauth info" or "xauth extract"
when no .Xauthority exits, xauth says:

xauth:  creating new authority file /home/reed/.Xauthority

Which is not true. It is not created.

(For some reason, when I use xauth or xdm, my ~/.Xauthority format causes
it so I can't start clients when I start X using startx. So I remove
my ~/.Xauthority.)
Comment 1 Erik Andren 2006-05-29 06:50:55 UTC
I can confirm this bug.
Comment 2 Daniel Stone 2007-02-27 01:32:14 UTC
Sorry about the phenomenal bug spam, guys.  Adding xorg-team@ to the QA contact so bugs don't get lost in future.
Comment 3 Alan Coopersmith 2009-10-09 23:01:35 UTC
Confirmed by doing mkdir of an empty directory and running xauth list
with HOME set to that.   It was printing the message whenever .xauthority
didn't exist, and probably meant "If you do an operation that writes to
.xauthority, a new file will be created", but I've chosen to just change
it to the simpler and more correct: "file %s does not exist"

commit 1c701094169b6e33f7faf21a269e949bf134a326
Author: Alan Coopersmith <alan.coopersmith@sun.com>
Date:   Fri Oct 9 22:58:52 2009 -0700

    Bug 7051: xauth says creating new authority file even though it does not
    
    https://bugs.freedesktop.org/show_bug.cgi?id=7051
    
    Signed-off-by: Alan Coopersmith <alan.coopersmith@sun.com>

diff --git a/process.c b/process.c
index 893b51d..48a0df0 100644
--- a/process.c
+++ b/process.c
@@ -769,7 +769,7 @@ auth_initialize(char *authfilename)
            return -1;
        }                               /* else ignore it */
        fprintf (stderr, 
-                "%s:  creating new authority file %s\n",
+                "%s:  file %s does not exist\n",
                 ProgramName, authfilename);
     } else {
        xauth_existed = True;


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.