Bug 7051: xauth says creating new authority file even though it does not

https://bugs.freedesktop.org/show_bug.cgi?id=7051

Signed-off-by: Alan Coopersmith <alan.coopersmith@sun.com>